--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p> <i> Sence the faith </i></p>
         </div>
         <div class="back">
-            <img src="/images/m1.jpg" class="fluid-img" alt="...">
+            <img src="./images/m1.jpg" class="fluid-img" alt="...">
             <!-- <img src="images/m1.jpg" alt="trust image" width="1200px"> -->
         </div>
     </div>
